# renovatebot.github.io

./: .gitignore  .gitmodules  .gitpod.yml  .lintstagedrc.json  .npmrc  .pdm-python  .prettierignore  404.html  Makefile  Pipfile  README  README.md  cypress.config.ts  cypress.json  hooks.py  includes  index.html  mkdocs-hooks  mkdocs.yml  netlify.toml  overrides  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate-global-schema.json  renovate-inherited-schema.json  renovate-schema.json  renovate.json  requirements.in  requirements.txt  security.txt  sitemap.xml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: contributing.md  local-development.md  lock.yml  pull_request_template.md
.gitpod/: Dockerfile
.husky/: pre-commit
about-us/: index.html
automerge-configuration/: index.html
bazel/: index.html
bicep/: index.html
bot-comparison/: index.html
cache-decoder/: cache-decoder.124bcf0b.js  cache-decoder.124bcf0b.js.map  cache-decoder.5fc3263f.js  cache-decoder.5fc3263f.js.map  cache-decoder.843ac536.js  cache-decoder.843ac536.js.map  index.22db518c.js  index.22db518c.js.map  index.53ea61a0.js  index.53ea61a0.js.map  index.e5090a52.js  index.e5090a52.js.map  index.f1a68bcc.js  index.f1a68bcc.js.map  index.html
config-migration/: index.html
config-overview/: index.html
config-presets/: index.html
config-validation/: index.html
configuration-options/: index.html
configuration-templates/: index.html
configure-renovate/: index.html
cypress/: tsconfig.json
(+385 files in other folders)
