[tool.poetry]
name = "docs.renovatebot.com"
version = "1.0.0"
authors = []
description = ""

[tool.poetry.dependencies]
python = ">=3.9"
mkdocs = "==1.5.3"
mkdocs-material = "==9.5.3"
mkdocs-awesome-pages-plugin = "==2.9.2"
# to support amazonlinux 2 on vercel with python 3.9
urllib3 = [
  { version = "<2", python = "<=3.9" },
  { version = ">=2", python = ">=3.10" }
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
